samples/_failures_safe/1761279358_5689d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80826b83.c: In function ‘main’:
./samples/SAFE/__tmp_80826b83.c:177:9: error: expected expression at end of input
  177 |         printf("%-12s %-15s %-6d %-6d\n",
      |         ^~~~~~
./samples/SAFE/__tmp_80826b83.c:177:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_80826b83.c:177:9: error: expected declaration or statement at end of input
